Move to JDK 21 toolchain + tidy JVM args
build.gradle drops the Java 17 sourceCompatibility/targetCompatibility
pair for a Gradle toolchain at JavaLanguageVersion.of(21); settings.gradle
adds the foojay-resolver-convention plugin so Gradle can auto-provision
a matching JDK when JAVA_HOME points elsewhere.

JVM args are hoisted into a shared jvmRuntimeArgs list reused by the
application and test blocks (removes a 6-line duplicate) and gains
--enable-native-access=ALL-UNNAMED — silences the JDK 21 "restricted
method" warnings emitted by ND4J's JavaCPP JNI bindings and keeps the
build forward-compatible with JDK 22, where that flag becomes mandatory
for unnamed-module native calls.

Docs:
- README: build instructions reflect JDK 21 toolchain + the new flag;
  new Done entry covering the toolchain migration.
- ARCHITECTURE: Java 21 + toolchain note in the build section.
- CLAUDE.md: short pointer to README/ARCHITECTURE plus the /claude →
  /architecture redirect note so future sessions don't go hunting for
  a separate Claude-facing doc page.

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>